Animated Navigation completed

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
     <section>
         <div>
+        <button>
             <span></span>
             <span></span>
+        </button>
             <nav>
                 <ul>
                     <li><a href="">Home</a></li>
